[gd_scene load_steps=4 format=3 uid="uid://crpf5818ng1lk"]

[ext_resource type="Texture2D" uid="uid://7k1807dydmf" path="res://sprites/hook_point.png" id="1_6k2ex"]
[ext_resource type="Script" path="res://scripts/magnetic_blast.gd" id="1_r7pt3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ri83"]
size = Vector2(39, 36)

[node name="magnetic_blast" type="Area2D"]
script = ExtResource("1_r7pt3")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1.78814e-07, -1.78814e-07)
texture = ExtResource("1_6k2ex")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, 0)
shape = SubResource("RectangleShape2D_8ri83")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-1.5, -7.15256e-07)
scale = Vector2(1.95, 1.8)

[node name="ExplosionTimer" type="Timer" parent="."]

[connection signal="child_entered_tree" from="CollisionShape2D" to="." method="_on_collision_shape_2d_child_entered_tree"]
[connection signal="tree_entered" from="CollisionShape2D" to="." method="_on_collision_shape_2d_tree_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_explosion_timer_timeout"]
